[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "avilla-workspace"
dependencies = [
    "graia-broadcast>=0.17.5",
    #"graia-amnesia>=0.5.2",
    #"launart>=0.6.0,<1.0.0",
    "loguru>=0.6.0",
    "yarl>=1.7.2",
    "statv>=0.2.2",
    "aiohttp>=3.8.1",
    "creart>=0.2.1",
    "creart-graia>=0.1.5",
    "graia-saya>=0.0.17",
    "textual<1.0.0,>=0.29.0",
    "nonebot2>=2.0.1",
    "wsproto>=1.2.0",
    "starlette>=0.30.0",
    "uvicorn>=0.23.1",
]
version = "0"
requires-python = ">=3.9"

[build-system]
requires = ["mina-build", "editables"]
build-backend = "mina.backend"

[tool.mina]
enabled = false

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mina.packages.core]
includes = ["avilla/core", "avilla/core/py.typed", "avilla/spec/core"]

[tool.mina.packages.core.project]
name = "avilla-core"
version = "1.0.0-alpha.5"
authors = [
  {name = "GreyElaina", email = "GreyElaina@outlook.com"},
  {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
  {name = "ProgramRipper", email = "programripper@foxmail.com"},
  {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"}
]
dependencies = [
    "graia-broadcast",
    "graia-amnesia",
    "loguru",
    "yarl",
    "launart"
]
description = ""
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

[tool.mina.packages.core.project.urls]
homepage = "https://github.com/GraiaProject/Avilla"
repository = "https://github.com/GraiaProject/Avilla"

[tool.mina.packages.elizabeth]
includes = ["avilla/elizabeth"]
raw-dependencies = [
  "avilla-core >= 1.0.0-alpha.5",
  "avilla-spec-qq >= 1.0.0-alpha.5"
]

[tool.mina.packages.elizabeth.project]
name = "avilla-elizabeth"
version = "1.0.0-alpha.5" # WIP for release.
authors = [
  {name = "GreyElaina", email = "GreyElaina@outlook.com"},
]
dependencies = []
description = ""
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

[tool.mina.packages.elizabeth.project.urls]
homepage = "https://github.com/GraiaProject/Avilla"
repository = "https://github.com/GraiaProject/Avilla"


[tool.mina.packages.console]
includes = ["avilla/console"]
raw-dependencies = [
  "avilla-core >= 1.0.0-alpha.5",
  "textual<1.0.0,>=0.29.0",
]

[tool.mina.packages.console.project]
name = "avilla-console"
version = "0.2.0" # WIP for release.
authors = [
  {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = []
description = "Avilla Console Protocol"
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.9"

[tool.mina.packages.console.project.urls]
homepage = "https://github.com/GraiaProject/Avilla"
repository = "https://github.com/GraiaProject/Avilla"

[tool.mina.packages."spec/qq"]
includes = ["avilla/spec/qq"]
raw_dependencies = [
  "avilla-core >= 1.0.0-alpha.5",
]

[tool.mina.packages."spec/qq".project]
name = "avilla-spec-qq"
version = "1.0.0-alpha.5"
authors = [
  {name = "GreyElaina", email = "GreyElaina@outlook.com"},
  {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
  {name = "ProgramRipper", email = "programripper@foxmail.com"},
  {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"}
]
dependencies = []
description = ""
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

[tool.mina.packages."spec/qq".project.urls]
homepage = "https://github.com/GraiaProject/Avilla"
repository = "https://github.com/GraiaProject/Avilla"

[tool.mina.packages."qqguild/tencent"]
includes = ["avilla/qqguild/tencent"]
raw_dependencies = [
  "avilla-core >= 1.0.0-alpha.5",
]

[tool.mina.packages."qqguild/tencent".project]
name = "avilla-qqguild"
version = "1.0.0-alpha.5"
authors = [
  {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"}
]
dependencies = []
description = ""
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

[tool.mina.packages."qqguild/tencent".project.urls]
homepage = "https://github.com/GraiaProject/Avilla"
repository = "https://github.com/GraiaProject/Avilla"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "graia-scheduler>=0.0.8",
    "mina-build>=0.2.6",
    "richuru>=0.1.1",
    "ruff>=0.0.272",
    "uvicorn>=0.22.0",
    "python-devtools>=2",
    "ipykernel>=6.23.2",
]
